# posters-science-extraction-api

./: .dockerignore  .env.example  .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  api.py  codemeta.json  config.py  dev.txt  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.yml  error_codes.py  job_worker.py  poster_extraction.py  poster_extraction_schema.json  poster_schema.json  poster_sentry_check.py  pyproject.toml  requirements-prod.txt  requirements.txt  test.ipynb  test_api.py  validation.py
.github/workflows/: deploy-main.yml
docs/: API.md  ARCHITECTURE.md  DOCKER.md  EVALUATION.md  FAIR_ERROR_CODES.md  INSTALLATION.md
example_output/: 10890106_extracted.json  10890106_raw.txt  15963941_extracted.json  16083265_extracted.json  17268692_extracted.json  42_extracted.json  4737132_extracted.json  4737132_raw.txt  5128504_extracted.json  6724771_extracted.json  8228476_extracted.json  8228568_extracted.json  8228568_raw.txt  results.json
manual_poster_annotation/10890106/: 10890106.json  10890106_raw.md  10890106_sub-json.json
manual_poster_annotation/15963941/: 15963941.json  15963941_raw.md  15963941_sub-json.json
manual_poster_annotation/16083265/: 16083265.json  16083265_raw.md  16083265_sub-json.json
manual_poster_annotation/17268692/: 17268692_sub-json.json  1726892.json  1726892_raw.md  1726892_sub-json.json
manual_poster_annotation/42/: 42.json  42_raw.md  42_sub-json.json
manual_poster_annotation/4737132/: 4737132.json  4737132_raw.md  (+1 more)
ollama/: ollama-compose.yml  readme.md
test_results/: 10890106_extracted.json  10890106_raw.txt  15963941_extracted.json  15963941_raw.md  16083265_extracted.json  16083265_raw.md  17268692_extracted.json  17268692_raw.txt  42_extracted.json  42_raw.txt  4737132_extracted.json  5128504_extracted.json  5128504_raw.md  6724771_extracted.json  6724771_raw.txt  8228476_extracted.json  8228476_raw.txt  8228568_extracted.json  results.json
(+12 files in other folders)
