[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poster2json"
version = "1.0.0"
description = "Convert scientific posters (PDF/images) to structured JSON using LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FAIR Data Innovations Hub", email = "info@fairdataihub.org"}
]
keywords = [
    "poster",
    "json",
    "metadata",
    "extraction",
    "llm",
    "scientific",
    "pdf",
    "ocr"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]

dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "safetensors",
    "sentencepiece",
    "rouge-score",
    "numpy",
    "Pillow",
    "pymupdf",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/fairdataihub/poster2json"
Documentation = "https://github.com/fairdataihub/poster2json/tree/main/docs"
Repository = "https://github.com/fairdataihub/poster2json"
Issues = "https://github.com/fairdataihub/poster2json/issues"

[project.scripts]
poster2json = "poster_extraction:main"

[tool.setuptools]
py-modules = ["poster_extraction", "api"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

